feat: update share.yml

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -29,4 +29,4 @@
 
 - type: openstreetmap
   icon: 'fa-regular fa-map'
-  url:  'https://openstreemap.org/user/fortera_au'
+  url:  'https://openstreetmap.org/user/fortera_au'
