--- a/_data/share.yml
+++ b/_data/share.yml
@@ -2,6 +2,21 @@
 #  Icons from <https://fontawesome.com/>
 
 platforms:
+  - type: Mastodon
+    icon: "fa-brands fa-mastodon"
+    # See: https://github.com/justinribeiro/share-to-mastodon#properties
+    instances:
+      - label: mastodon.social
+        link: "https://mastodon.social/"
+      - label: mastodon.online
+        link: "https://mastodon.online/"
+      - label: fosstodon.org
+        link: "https://fosstodon.org/"
+      - label: en.osm.town
+        link: "https://en.osm.town"
+      - label: aus.social
+        link: "https://aus.social"
+        
   - type: Twitter
     icon: "fa-brands fa-square-x-twitter"
     link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
@@ -10,9 +25,9 @@ platforms:
     icon: "fab fa-facebook-square"
     link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
 
-  - type: Telegram
-    icon: "fab fa-telegram"
-    link: "https://t.me/share/url?url=URL&text=TITLE"
+  # - type: Telegram
+  #   icon: "fab fa-telegram"
+  #   link: "https://t.me/share/url?url=URL&text=TITLE"
 
   # Uncomment below if you need to.
   #
@@ -24,15 +39,3 @@ platforms:
   #   icon: "fab fa-weibo"
   #   link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
   #
-  # - type: Mastodon
-  #   icon: "fa-brands fa-mastodon"
-  #   # See: https://github.com/justinribeiro/share-to-mastodon#properties
-  #   instances:
-  #     - label: mastodon.social
-  #       link: "https://mastodon.social/"
-  #     - label: mastodon.online
-  #       link: "https://mastodon.online/"
-  #     - label: fosstodon.org
-  #       link: "https://fosstodon.org/"
-  #     - label: photog.social
-  #       link: "https://photog.social/"
